--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,11 +5,38 @@
         "label": "program01",
         "type": "shell",
         "command": "g++",
-        "args": ["-std=c++17", "-fopenmp", "-Wall", "-o", "prog", "01/main.cpp"],
+        "args": [
+          "-std=c++17",
+          "-fopenmp",
+          "-Wall",
+          "-o",
+          "prog",
+          "01/main.cpp"
+        ],
         "group": {
           "kind": "build",
           "isDefault": true
         }
+      },
+      {
+        "label": "program02",
+        "type": "shell",
+        "command": "g++",
+        "args": [
+          "-std=c++17",
+          "-fopenmp",
+          "-Wall",
+          "-o",
+          "prog",
+          "02/main.cpp"
+        ],
+        "group": {
+          "kind": "build",
+          "isDefault": true
+        },
+        "problemMatcher": [
+          "$gcc"
+        ]
       }
     ]
   }
